[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/creature_snail.gd" type="Script" id=1]
[ext_resource path="res://Sprites/critters/snail/idle001.png" type="Texture" id=2]
[ext_resource path="res://Sprites/critters/snail/idle002.png" type="Texture" id=3]
[ext_resource path="res://Sprites/critters/snail/idle003.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.5, 1.75 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.375, 2.25 )

[node name="creature_snail" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 136
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 8.88506e-06
scale = Vector2( 2, 2 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 1
playing = true

[node name="FrontChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 136

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontChecker"]
position = Vector2( -6.625, -0.25 )
shape = SubResource( 4 )

[node name="botArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 136

[node name="CollisionShape2D" type="CollisionShape2D" parent="botArea"]
position = Vector2( 1, 4 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="BottomChecker" type="RayCast2D" parent="."]
position = Vector2( 1, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 136

[connection signal="body_shape_entered" from="FrontChecker" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="botArea" to="." method="_on_botArea_body_shape_exited"]
